--- a/movierank.html
+++ b/movierank.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="minimum-scale=10">
         <title>WatFlix</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="movierank.css">
         <script src="jquery-3.6.0.min.js"></script>
         <script src="index.js"></script>
     
@@ -40,27 +40,3 @@
                 </div>
 
                 <div class="nav-footer">
-                    <div class="footer-item">
-                        <span class="material-symbols-outlined">
-                            group
-                        </span>
-                    </div>
-                    <div class="footer-item">
-
-                    </div>
-                </div>
-
-            </div>
-        </nav>
-
-        <!-- main 안쪽에 작성하신 div 넣어주세요 -->
-        <main>
-        </main>
-      
-
-
-    </body>
-
-
-
-</html>
