--- a/index.html
+++ b/index.html
@@ -57,4 +57,99 @@
 
             </div>
         </nav>
+
+        <!-- main 안쪽에 작성하신 div 넣어주세요 -->
+        <main>
+            <div class="contents">
+                <div class="contents-banner">
+                    <span id="plain-text">WattFlix 인기 작품</span>
+                </div>
+                <div class="contents-scroll">
+                    
+                    <a id="movie">
+                            <div id="movie-elem">
+                                <img src="https://movie-phinf.pstatic.net/20190115_228/1547528180168jgEP7_JPEG/movie_image.jpg?type=m203_290_2">
+                            </div>
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20190109_149/1546998123676c6LjJ_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20180516_300/15264574387234QNai_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20190122_81/1548118455965SCCSW_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20211210_72/1639104921350Pk5gh_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20160119_278/14531650465287bcuk_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20111222_233/1324486884038nu8Xk_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20150924_194/1443056454769VJKkL_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20210315_143/1615793538419tIM2B_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                </>
+            </div>
+
+            <div class="screening">
+                <div class="screening-banner">
+                    <span id="plain-text">New Movies on Theaters</span>
+                </div>
+                <div class="screening-scroll">
+                    <a href="asdf.com" id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20220615_63/1655270906406BGdFF_JPEG/movie_image.jpg?type=m203_290_2">
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20220516_144/1652665409592Chvey_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20220616_274/1655363103107UB9nG_JPEG/movie_image.jpg?type=f125">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20220511_189/1652251073330PXNoG_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20220516_144/1652687286550mcE4G_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20220509_176/1652081912471yhg3N_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20220504_257/1651659031710cXQVx_PNG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20220504_33/165164173504831gKe_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20220510_209/1652173423913czGcU_JPEG/movie_image.jpg?type=m203_290_2">
+
+                    </a>
+                </div>
+            </div>
+
+            </div>
+        </main>
+    </body>
 </html>
