--- a/bookmark.html
+++ b/bookmark.html
@@ -1,14 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script></script>
-    <link rel="">
-    <title>Document</title>
+    <meta name="viewport" content="minimum-scale=10">
+    <title>WattFlix</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="bookmark.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="bookmark.js"></script>
+    <!-- <script src="index.js"></script> -->
 </head>
+
 <body>
-    
+    <!-- navbar 부분입니다 -->
+    <nav style="background-color: #000000; height:100%;">
+        <div class="nav-outter">
+            <div class="nav-icon">
+                <div class="icon-item">
+                    <span class="material-symbols-outlined">fit_screen</span>
+                    <span id="plain-text">WattFlix</span>
+                </div>
+            </div>
+
+            <div class="nav-menu">
+                <div class="nav-item">
+                    <span class="material-symbols-outlined">home</span>
+                    <span id="plain-text">Home</span>
+                </div>
+                <div class="nav-item">
+                    <span class="material-symbols-outlined">sort</span>
+                    <span id="plain-text">Rank</span>
+                </div>
+                <div class="nav-item">
+                    <span class="material-symbols-outlined">view_cozy</span>
+                    <span id="plain-text">Poster</span>
+                </div>
+            </div>
+
+            <div class="nav-footer">
+                <div class="footer-item">
+                    <span class="material-symbols-outlined">
+                        group
+                    </span>
+                </div>
+                <div class="footer-item">
+
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- main 안쪽에 작성하신 div 넣어주세요 -->
+    <main>
+        <div id="bookmarkContainer">
+            <!-- 툴바 -->
+            <div class="toolbar">
+                <div class="tagbar">
+                    <button class="btn">#영화</button>
+                    <button class="btn">#감독</button>
+                    <button class="btn">#배우</button>
+                    <button class="btn">#장르</button>
+                </div>
+                <div class="searchbarContainer"><label> 
+                    <span class="material-symbols-outlined">
+                        search 
+                        </span>
+                    <input class="searchbar" type="text" placeholder="어떤 영화를 보고싶은가요?"></label>
+                </div>
+            </div> <!-- toolbar -->
+
+            <div id="markedContainer">
+                <ol class="movieList">
+                    <li class="movieItem">
+                        <div class="commentSection">
+                           <span class="comment">text</span>
+                        </div>
+                    </li>
+                    <li class="movieItem">
+                        <div class="moviePoster">
+                            <img src="https://img.dtryx.com/poster/2022/06/454DBCC3-41CA-43CC-ADE8-244DCD9AA7CC.small.jpg">
+                            <div class="movieInfo">
+                                <caption id="caption">토르</caption>
+                                <span class="material-symbols-outlined mark">
+                                    bookmarks
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="movieItem">
+                        <div class="moviePoster">
+                            <img src="https://img.dtryx.com/poster/2022/05/5433D630-28D1-4907-96A8-AACD12AF11C4.small.jpg">
+                            <div class="movieInfo">
+                                <caption id="caption">애프터 양</caption>
+                                <span class="material-symbols-outlined mark">
+                                    bookmarks
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="movieItem">
+                        <div class="moviePoster">
+                            <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000082/82120/82120_1000.jpg">
+                            <div class="movieInfo">
+                                <caption id="caption">토르</caption>
+                                <span class="material-symbols-outlined mark">
+                                    bookmarks
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="movieItem">
+                        <div class="moviePoster">
+                            <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85999/85999_1000.jpg">
+                            <div class="movieInfo">
+                                <caption id="caption">헤어질 결심</caption>
+                                <span class="material-symbols-outlined mark">
+                                bookmarks
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="movieItem">
+                        <div class="moviePoster">
+                            <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85852/85852_1000.jpg">
+                            <div class="movieInfo">
+                                <span class="material-symbols-outlined mark">
+                                    bookmarks
+                                    </span>
+                            </div>
+                        </div>
+                    </li>
+                </ol>
+            </div> <!-- markedContainer -->
+        </div>
+    </main>
 </body>
+
 </html>
