--- a/bookmark.html
+++ b/bookmark.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="minimum-scale=10">
     <title>WattFlix</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="bookmark.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="bookmark.js"></script>
     <!-- <script src="index.js"></script> -->
@@ -68,74 +71,89 @@
                     <button class="btn">#배우</button>
                     <button class="btn">#장르</button>
                 </div>
-                <div class="searchbarContainer"><label> 
-                    <span class="material-symbols-outlined">
-                        search 
+                <div class="searchbarContainer"><label>
+                        <span class="material-symbols-outlined">
+                            search
                         </span>
-                    <input class="searchbar" type="text" placeholder="어떤 영화를 보고싶은가요?"></label>
+                        <input class="searchbar" type="text" placeholder="어떤 영화를 보고싶은가요?"></label>
                 </div>
             </div> <!-- toolbar -->
 
             <div id="markedContainer">
                 <ol class="movieList">
                     <li class="movieItem">
-                        <div class="commentSection">
-                           <span class="comment">text</span>
-                        </div>
-                    </li>
-                    <li class="movieItem">
-                        <div class="moviePoster">
-                            <img src="https://img.dtryx.com/poster/2022/06/454DBCC3-41CA-43CC-ADE8-244DCD9AA7CC.small.jpg">
-                            <div class="movieInfo">
-                                <caption id="caption">토르</caption>
-                                <span class="material-symbols-outlined mark">
-                                    bookmarks
-                                </span>
+                        <a href="#">
+                            <div class="commentSection">
+                                <span class="comment">text</span>
                             </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="movieItem">
-                        <div class="moviePoster">
-                            <img src="https://img.dtryx.com/poster/2022/05/5433D630-28D1-4907-96A8-AACD12AF11C4.small.jpg">
-                            <div class="movieInfo">
-                                <caption id="caption">애프터 양</caption>
-                                <span class="material-symbols-outlined mark">
-                                    bookmarks
-                                </span>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="movieItem">
-                        <div class="moviePoster">
-                            <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000082/82120/82120_1000.jpg">
-                            <div class="movieInfo">
-                                <caption id="caption">토르</caption>
-                                <span class="material-symbols-outlined mark">
-                                    bookmarks
-                                </span>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="movieItem">
-                        <div class="moviePoster">
-                            <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85999/85999_1000.jpg">
-                            <div class="movieInfo">
-                                <caption id="caption">헤어질 결심</caption>
-                                <span class="material-symbols-outlined mark">
-                                bookmarks
-                                </span>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="movieItem">
-                        <div class="moviePoster">
-                            <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85852/85852_1000.jpg">
-                            <div class="movieInfo">
-                                <span class="material-symbols-outlined mark">
-                                    bookmarks
+                        <a href="#">
+                            <div class="moviePoster marked">
+                                <img
+                                    src="https://img.dtryx.com/poster/2022/06/454DBCC3-41CA-43CC-ADE8-244DCD9AA7CC.small.jpg">
+                                <div class="movieInfo">
+                                    <caption id="caption">모어</caption>
+                                    <span class="material-symbols-outlined mark">
+                                        bookmarks
                                     </span>
+                                </div>
                             </div>
-                        </div>
+                        </a>
+                    </li>
+                    <li class="movieItem">
+                        <a href="#">
+                            <div class="moviePoster marked">
+                                <img
+                                    src="https://img.dtryx.com/poster/2022/05/5433D630-28D1-4907-96A8-AACD12AF11C4.small.jpg">
+                                <div class="movieInfo">
+                                    <caption id="caption">애프터 양</caption>
+                                    <span class="material-symbols-outlined mark">
+                                        bookmarks
+                                    </span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="movieItem marked">
+                        <a href="#">
+                            <div class="moviePoster">
+                                <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000082/82120/82120_1000.jpg">
+                                <div class="movieInfo">
+                                    <caption id="caption">탑건</caption>
+                                    <span class="material-symbols-outlined mark">
+                                        bookmarks
+                                    </span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="movieItem marked">
+                        <a href="#">
+                            <div class="moviePoster">
+                                <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85999/85999_1000.jpg">
+                                <div class="movieInfo">
+                                    <caption id="caption">토르 : 러브앤썬더</caption>
+                                    <span class="material-symbols-outlined mark">
+                                        bookmarks
+                                    </span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="movieItem marked">
+                        <a href="#">
+                            <div class="moviePoster">
+                                <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85852/85852_1000.jpg">
+                                <div class="movieInfo">
+                                    <caption id="caption">헤어질 결심</caption>
+                                    <span class="material-symbols-outlined mark">
+                                        bookmarks
+                                    </span>
+                                </div>
+                            </div>
+                        </a>
                     </li>
                 </ol>
             </div> <!-- markedContainer -->
