HTML,CSS,JS - navbar v1

--- a/index.html
+++ b/index.html
@@ -77,9 +77,22 @@
                 <div class="contents-scroll">
                     
                     <a id="movie">
-                            <div id="movie-elem">
-                                <img src="https://movie-phinf.pstatic.net/20190115_228/1547528180168jgEP7_JPEG/movie_image.jpg?type=m203_290_2">
-                            </div>
+                        <img src="https://movie-phinf.pstatic.net/20190109_149/1546998123676c6LjJ_JPEG/movie_image.jpg?type=m203_290_2">
+                        <div id="movie-info">
+                            <p>영화 제목</p>
+                            <p>감독</p>
+                            <p>주연</p>
+                            <p>코멘트</p>
+                        </div>
+                    </a>
+                    <a id="movie">
+                        <img src="https://movie-phinf.pstatic.net/20190109_149/1546998123676c6LjJ_JPEG/movie_image.jpg?type=m203_290_2">
+                        <div id="movie-info">
+                            <p>영화 제목</p>
+                            <p>감독</p>
+                            <p>주연</p>
+                            <p>코멘트</p>
+                        </div>
                     </a>
                     <a id="movie">
                         <img src="https://movie-phinf.pstatic.net/20190109_149/1546998123676c6LjJ_JPEG/movie_image.jpg?type=m203_290_2">
@@ -113,7 +126,7 @@
                         <img src="https://movie-phinf.pstatic.net/20210315_143/1615793538419tIM2B_JPEG/movie_image.jpg?type=m203_290_2">
 
                     </a>
-                </>
+                
             </div>
 
             <div class="screening">
@@ -161,5 +174,7 @@
 
             </div>
         </main>
+
+
     </body>
 </html>
