--- a/signup.html
+++ b/signup.html
@@ -91,7 +91,7 @@
                             <span>비밀번호 확인</span>
                             <input type="password">
                         </div>
-                        <button>가입하기</button>
+                        <button type="submit">가입하기</button>
                         
 
 
