--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </form>
                     </div>
     
-                    <a href="" class="footer-item">
+                    <a href="signup.html" class="footer-item">
                         <span class="material-symbols-outlined">person_add</span>
                         <span class="link-text">Sign up</span>
                     </a>
@@ -75,25 +75,15 @@
                     <span id="plain-text">WattFlix 인기 작품</span>
                 </div>
                 <div class="contents-scroll">
-                    
-                    <a id="movie">
+                    <div class="movie" onclick="location.href='index.html'">
                         <img src="https://movie-phinf.pstatic.net/20190109_149/1546998123676c6LjJ_JPEG/movie_image.jpg?type=m203_290_2">
                         <div id="movie-info">
-                            <p>영화 제목</p>
+                            <p></p>
                             <p>감독</p>
                             <p>주연</p>
                             <p>코멘트</p>
                         </div>
-                    </a>
-                    <a id="movie">
-                        <img src="https://movie-phinf.pstatic.net/20190109_149/1546998123676c6LjJ_JPEG/movie_image.jpg?type=m203_290_2">
-                        <div id="movie-info">
-                            <p>영화 제목</p>
-                            <p>감독</p>
-                            <p>주연</p>
-                            <p>코멘트</p>
-                        </div>
-                    </a>
+                    </div>
                     <a id="movie">
                         <img src="https://movie-phinf.pstatic.net/20190109_149/1546998123676c6LjJ_JPEG/movie_image.jpg?type=m203_290_2">
 
