HTML - bookmark class 명칭 변경

--- a/bookmark.html
+++ b/bookmark.html
@@ -82,7 +82,7 @@
 
     <!-- main 안쪽에 작성하신 div 넣어주세요 -->
     <main>
-        <div id="bookmarkContainer">
+        <div id="Container">
             <!-- 툴바 -->
             <div class="toolbar">
                 <div class="tagbar">
@@ -99,9 +99,9 @@
                 </div>
             </div> <!-- toolbar -->
 
-            <div id="markedContainer">
+            <div id="bookmarkContainer">
                 <ol class="movieList">
-                    <li class="movieItem">
+                    <li class="movieItem rcBtn">
                         <a href="#">
                             <div class="commentSection">
                                 <span class="comment">text</span>
@@ -176,7 +176,7 @@
                         </a>
                     </li>
                 </ol>
-            </div> <!-- markedContainer -->
+            </div> <!--Container -->
         </div>
     </main>
 </body>
