HTML - bookmark 영화 콘텐츠 추가

--- a/bookmark.html
+++ b/bookmark.html
@@ -111,10 +111,9 @@
                     <li class="movieItem">
                         <a href="#">
                             <div class="moviePoster marked">
-                                <img
-                                    src="https://img.dtryx.com/poster/2022/06/454DBCC3-41CA-43CC-ADE8-244DCD9AA7CC.small.jpg">
+                                <img src="https://img.dtryx.com/poster/2022/06/454DBCC3-41CA-43CC-ADE8-244DCD9AA7CC.small.jpg">
                                 <div class="movieInfo">
-                                    <caption id="caption">모어</caption>
+                                    <caption class="movieTitle">모어</caption>
                                     <span class="material-symbols-outlined mark">
                                         bookmarks
                                     </span>
@@ -125,10 +124,9 @@
                     <li class="movieItem">
                         <a href="#">
                             <div class="moviePoster marked">
-                                <img
-                                    src="https://img.dtryx.com/poster/2022/05/5433D630-28D1-4907-96A8-AACD12AF11C4.small.jpg">
+                                <img src="https://img.dtryx.com/poster/2022/05/5433D630-28D1-4907-96A8-AACD12AF11C4.small.jpg">
                                 <div class="movieInfo">
-                                    <caption id="caption">애프터 양</caption>
+                                    <caption class="movieTitle">애프터 양</caption>
                                     <span class="material-symbols-outlined mark">
                                         bookmarks
                                     </span>
@@ -136,12 +134,12 @@
                             </div>
                         </a>
                     </li>
-                    <li class="movieItem marked">
-                        <a href="#">
-                            <div class="moviePoster">
+                    <li class="movieItem">
+                        <a href="detailpage.html">
+                            <div class="moviePoster marked">
                                 <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000082/82120/82120_1000.jpg">
                                 <div class="movieInfo">
-                                    <caption id="caption">탑건</caption>
+                                    <caption class="movieTitle">탑건</caption>
                                     <span class="material-symbols-outlined mark">
                                         bookmarks
                                     </span>
@@ -149,12 +147,12 @@
                             </div>
                         </a>
                     </li>
-                    <li class="movieItem marked">
+                    <li class="movieItem">
                         <a href="#">
-                            <div class="moviePoster">
+                            <div class="moviePoster marked">
                                 <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85999/85999_1000.jpg">
                                 <div class="movieInfo">
-                                    <caption id="caption">토르 : 러브앤썬더</caption>
+                                    <caption class="movieTitle">토르 : 러브앤썬더</caption>
                                     <span class="material-symbols-outlined mark">
                                         bookmarks
                                     </span>
@@ -162,12 +160,103 @@
                             </div>
                         </a>
                     </li>
-                    <li class="movieItem marked">
+                    <li class="movieItem">
                         <a href="#">
-                            <div class="moviePoster">
+                            <div class="moviePoster marked">
                                 <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85852/85852_1000.jpg">
                                 <div class="movieInfo">
-                                    <caption id="caption">헤어질 결심</caption>
+                                    <caption class="movieTitle">헤어질 결심</caption>
+                                    <span class="material-symbols-outlined mark">
+                                        bookmarks
+                                    </span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="movieItem">
+                        <a href="#">
+                            <div class="moviePoster marked">
+                                <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85871/85871_1000.jpg">
+                                <div class="movieInfo">
+                                    <caption class="movieTitle">마녀 : <br>모든 것의 시작</caption>
+                                    <span class="material-symbols-outlined mark">
+                                        bookmarks
+                                    </span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="movieItem">
+                        <a href="#">
+                            <div class="moviePoster marked">
+                                <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85977/85977_1000.jpg">
+                                <div class="movieInfo">
+                                    <caption class="movieTitle">버즈 라이트이어</caption>
+                                    <span class="material-symbols-outlined mark">
+                                        bookmarks
+                                    </span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="movieItem">
+                        <a href="#">
+                            <div class="moviePoster marked">
+                                <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85813/85813_1000.jpg">
+                                <div class="movieInfo">
+                                    <caption class="movieTitle">범죄도시 2</caption>
+                                    <span class="material-symbols-outlined mark">
+                                        bookmarks
+                                    </span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="movieItem">
+                        <a href="#">
+                            <div class="moviePoster marked">
+                                <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85951/85951_1000.jpg">
+                                <div class="movieInfo">
+                                    <caption class="movieTitle">윌벤져스 : <br>수상한 캠핑대소동</caption>
+                                    <span class="material-symbols-outlined mark">
+                                        bookmarks
+                                    </span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="movieItem">
+                        <a href="#">
+                            <div class="moviePoster marked">
+                                <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000085/85920/85920_1000.jpg">
+                                <div class="movieInfo">
+                                    <caption class="movieTitle">컴온 컴온</caption>
+                                    <span class="material-symbols-outlined mark">
+                                        bookmarks
+                                    </span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="movieItem">
+                        <a href="#">
+                            <div class="moviePoster marked">
+                                <img src="https://t1.daumcdn.net/movie/b491e00f195f70fe69364c79cd1ef40224b19608">
+                                <div class="movieInfo">
+                                    <caption class="movieTitle">중경삼림</caption>
+                                    <span class="material-symbols-outlined mark">
+                                        bookmarks
+                                    </span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="movieItem">
+                        <a href="#">
+                            <div class="moviePoster marked">
+                                <img src="https://t1.daumcdn.net/movie/f5b9aa5ab1b58241b4c16792c15041d786ad6bce">
+                                <div class="movieInfo">
+                                    <caption class="movieTitle">여름 이야기</caption>
                                     <span class="material-symbols-outlined mark">
                                         bookmarks
                                     </span>
