HTML - 디테일페이지(탑건) 주석 수정

--- a/detailpage.html
+++ b/detailpage.html
@@ -82,7 +82,8 @@
             
             <div id="information">
                 <div id="infoBox1">
-                    <img id="mainposter" src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000082/82120/82120_1000.jpg">
+                    <a href="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000082/82120/82120_1000.jpg" target="_blank">
+                        <img id="mainposter" src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000082/82120/82120_1000.jpg"></a>
                 </div>
                 <div id="infoBox2">
                     <div id="infoDetail">
@@ -174,8 +175,7 @@
 
             <div id="nextmovie">
                 <div id="nextImg">
-                    <!-- <img id="movieImg" src="https://adimg.cgv.co.kr/images/202206/comeon/800x90.png"> -->
-                    <img id="movieImg" src="https://file.cineq.co.kr/j.aspx?guid=12a1564fff6644379a52b603ed5f85d0">
+                    <a href="detailpage2.html" target="_blank"><img id="movieImg" src="https://file.cineq.co.kr/j.aspx?guid=12a1564fff6644379a52b603ed5f85d0"></a>
                 </div>
             </div>
 
@@ -188,7 +188,7 @@
                 <div id="commentBox">
                     <input type="text" id="commentDetail" name="commentDetail" size="100" placeholder="  탑건: 매버릭   재미있게 보셨나요? 영화에 대해 이야기 나눠요!">
                     &nbsp;&nbsp;&nbsp;
-                    <img src="http://img.cgv.co.kr/R2014/images/point/ico_point_default.png">
+                    <button type="button" id="commentBtn"><img src="https://cutewallpaper.org/24/youtube-comment-png/logo-comment-button-youtube-png-ferretfurriesandotherthingies.png"></button>
                 </div>
             </div>
 
