HTML - 구현 페이지 간 링크 연결

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WatFlix</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="main.css">
         <script src="jquery-3.6.0.min.js"></script>
@@ -18,14 +18,14 @@
         <nav>
             <div class="nav-outter">
                 <div class="nav-icon">
-                    <a href="" class="icon-item">
+                    <a href="index.html" class="icon-item">
                         <span>WattFlix</span>
                     </a>
                 </div>
 
                 <div class="nav-menu">
                     
-                    <a href="" class="nav-item">
+                    <a href="index.html" class="nav-item">
                         <span class="material-symbols-outlined">home</span>
                         <span class="link-text">Home</span>
                     </a>
@@ -34,7 +34,7 @@
                         <span class="material-symbols-outlined">sort</span>
                         <span class="link-text">Rank</span>
                     </a>
-                    <a href="" class="nav-item">
+                    <a href="posterbook.html" class="nav-item">
                         <span class="material-symbols-outlined">view_cozy</span>
                         <span class="link-text">Poster</span>
                     </a>
@@ -224,7 +224,7 @@
                             <span class="material-symbols-outlined">bookmarks</span>
                         </div>
                     </a>
-                    <a class="movie">
+                    <a class="movie"  onclick="location.href='detailpage.html'" >
                         <img src="https://movie-phinf.pstatic.net/20220509_176/1652081912471yhg3N_JPEG/movie_image.jpg?type=m203_290_2">
                         <div id="movie-info">
                             <div>
@@ -234,7 +234,7 @@
                             <span class="material-symbols-outlined">bookmarks</span>
                         </div>
                     </a>
-                    <a class="movie">
+                    <a class="movie" onclick="location.href='detailpage2.html'">
                         <img src="https://movie-phinf.pstatic.net/20220607_79/1654593346304cTwrD_JPEG/movie_image.jpg?type=m203_290_2">
                         <div id="movie-info">
                             <div>
