--- a/detailpage2.html
+++ b/detailpage2.html
@@ -21,14 +21,14 @@
     <nav>
         <div class="nav-outter">
             <div class="nav-icon">
-                <a href="" class="icon-item">
+                <a href="index.html" class="icon-item">
                     <span>WattFlix</span>
                 </a>
             </div>
 
             <div class="nav-menu">
                 
-                <a href="" class="nav-item">
+                <a href="index.html" class="nav-item">
                     <span class="material-symbols-outlined">home</span>
                     <span class="link-text">Home</span>
                 </a>
@@ -37,7 +37,7 @@
                     <span class="material-symbols-outlined">sort</span>
                     <span class="link-text">Rank</span>
                 </a>
-                <a href="" class="nav-item">
+                <a href="posterbook.html" class="nav-item">
                     <span class="material-symbols-outlined">view_cozy</span>
                     <span class="link-text">Poster</span>
                 </a>
@@ -63,7 +63,7 @@
                     </form>
                 </div>
 
-                <a href="" class="footer-item">
+                <a href="signup.html" class="footer-item">
                     <span class="material-symbols-outlined">person_add</span>
                     <span class="link-text">Sign up</span>
                 </a>
